conf/templates/ingress/clientmgr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/app-root: /aeo
  name: aeo-net 
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    secretName: aeo-net
  rules:
  - host: aeo.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eo-clientmgr
            port:
              number: 7980
