conf/templates/ingress/mobiusview-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mobiusview-ingress
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "VDRLB"
    nginx.ingress.kubernetes.io/proxy-buffers: "8 64k"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"
    nginx.ingress.kubernetes.io/proxy-busy-buffers-size: "64k"  # Debe ser >= proxy-buffer-size y >= uno de los buffers de proxy-buffers
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-body-size: "32m"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/affinity-mode: "persistent"
    nginx.ingress.kubernetes.io/session-cookie-change-on-failure: "false"
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/session-cookie-path: /mobius
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - mobius.url
    secretName: mobius-secret
  rules:
  - host: mobius.url
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: mobiusview
              port:
                number: 80
